resources/app-sre-stage/github-mirror-stage/github-mirror.route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  annotations:
    kubernetes.io/tls-acme: "true"
  labels:
    service: github-mirror
  name: github-mirror-stage
spec:
  host: github-mirror.stage.devshift.net
  to:
    kind: Service
    name: github-mirror
    weight: 100
  tls:
    insecureEdgeTerminationPolicy: Redirect
    termination: edge
